AI bug fixed and auth layer too